--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_URL = https://dqfjvd1w-4000.euw.devtunnels.ms/
+NEXT_PUBLIC_API_URL = http://localhost:4000/graphql
 GRAPHQL_SCHEMA = http://localhost:4000/graphql
