--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.10",
-    "@reduxjs/toolkit": "^2.2.1",
+    "apollo-link-error": "^1.1.13",
     "dotenv": "^16.4.1",
     "graphql": "^16.8.1",
+    "jwt-decode": "^4.0.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.50.1",
-    "react-redux": "^9.1.0"
+    "react-hook-form": "^7.50.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
