--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.50.1"
+    "react-hook-form": "^7.50.1",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
