--- a/package.json
+++ b/package.json
@@ -13,15 +13,23 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@apollo/client": "^3.8.10",
+    "@apollo/client": "^3.9.0-rc.1",
+    "@apollo/experimental-nextjs-app-support": "^0.8.0",
+    "@auth/core": "^0.28.0",
+    "@auth/prisma-adapter": "^1.5.0",
+    "@floating-ui/react": "^0.26.9",
+    "@prisma/client": "^5.11.0",
     "apollo-link-error": "^1.1.13",
     "dotenv": "^16.4.1",
     "graphql": "^16.8.1",
     "jwt-decode": "^4.0.0",
     "next": "14.1.0",
+    "next-auth": "^5.0.0-beta.15",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
+    "react-icons": "^5.0.1",
+    "zod": "^3.22.4",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
@@ -40,10 +48,16 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "14.1.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-storybook": "^0.6.15",
     "postcss": "^8",
+    "prisma": "^5.11.0",
     "storybook": "^7.6.10",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.3.3"
