--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "apollo-link-error": "^1.1.13",
     "dotenv": "^16.4.1",
     "graphql": "^16.8.1",
+    "jose": "^5.2.3",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.15",
