--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@floating-ui/react": "^0.26.9",
     "@prisma/client": "^5.11.0",
     "apollo-link-error": "^1.1.13",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "dotenv": "^16.4.1",
     "graphql": "^16.8.1",
     "jose": "^5.2.3",
@@ -31,6 +33,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
+    "tailwind-merge": "^2.2.2",
     "zod": "^3.22.4",
     "zustand": "^4.5.1"
   },
@@ -38,14 +41,14 @@
     "@graphql-codegen/cli": "^5.0.0",
     "@graphql-codegen/client-preset": "^4.1.0",
     "@graphql-typed-document-node/core": "^3.2.0",
-    "@storybook/addon-essentials": "^7.6.10",
-    "@storybook/addon-interactions": "^7.6.10",
-    "@storybook/addon-links": "^7.6.10",
-    "@storybook/addon-onboarding": "^1.0.11",
-    "@storybook/blocks": "^7.6.10",
-    "@storybook/nextjs": "^7.6.10",
-    "@storybook/react": "^7.6.10",
-    "@storybook/test": "^7.6.10",
+    "@storybook/addon-essentials": "^8.0.5",
+    "@storybook/addon-interactions": "^8.0.5",
+    "@storybook/addon-links": "^8.0.5",
+    "@storybook/addon-onboarding": "^8.0.5",
+    "@storybook/blocks": "^8.0.5",
+    "@storybook/nextjs": "^8.0.5",
+    "@storybook/react": "^8.0.5",
+    "@storybook/test": "^8.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -60,7 +63,7 @@
     "eslint-plugin-storybook": "^0.6.15",
     "postcss": "^8",
     "prisma": "^5.11.0",
-    "storybook": "^7.6.10",
+    "storybook": "^8.0.5",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.3.3"
   }
