--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,7 @@
 {
   "extends": [
     "next/core-web-vitals",
-    "plugin:storybook/recommended",
-    "airbnb"
+    "plugin:storybook/recommended"
   ],
   "rules": {
     "react/jsx-filename-extension": "off",
