--- a/package.json
+++ b/package.json
@@ -13,27 +13,26 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@apollo/client": "^3.9.0-rc.1",
-    "@apollo/experimental-nextjs-app-support": "^0.8.0",
-    "@auth/core": "^0.28.0",
-    "@auth/prisma-adapter": "^1.5.0",
     "@floating-ui/react": "^0.26.9",
-    "@prisma/client": "^5.11.0",
-    "apollo-link-error": "^1.1.13",
+    "@hookform/resolvers": "^3.4.2",
+    "@parcel/watcher": "^2.4.1",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@urql/exchange-auth": "^2.2.0",
+    "@urql/next": "^1.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.1",
     "graphql": "^16.8.1",
-    "jose": "^5.2.3",
-    "jsonwebtoken": "^9.0.2",
-    "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.379.0",
     "next": "14.1.0",
-    "next-auth": "^5.0.0-beta.15",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "tailwind-merge": "^2.2.2",
+    "urql": "^4.1.0",
     "zod": "^3.22.4",
     "zustand": "^4.5.1"
   },
@@ -62,7 +61,6 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-storybook": "^0.6.15",
     "postcss": "^8",
-    "prisma": "^5.11.0",
     "storybook": "^8.0.5",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.3.3"
