--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "@parcel/watcher": "^2.4.1",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
-    "@urql/exchange-auth": "^2.2.0",
-    "@urql/next": "^1.1.1",
+    "@tanstack/react-query": "^5.45.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.1",
     "graphql": "^16.8.1",
+    "graphql-request": "^7.0.1",
     "lucide-react": "^0.379.0",
     "next": "14.1.0",
     "next-themes": "^0.3.0",
@@ -33,7 +33,6 @@
     "react-icons": "^5.0.1",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
-    "urql": "^4.1.0",
     "zod": "^3.22.4",
     "zustand": "^4.5.1"
   },
