--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@parcel/watcher": "^2.4.1",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^5.45.1",
     "awesome-graphql-client": "^2.0.0",
     "class-variance-authority": "^0.7.0",
