--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^5.45.1",
+    "@tanstack/react-query-devtools": "^5.51.9",
     "awesome-graphql-client": "^2.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
