--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"compile": "graphql-codegen",
 		"watch": "graphql-codegen -w",
 		"storybook": "storybook dev -p 6006",
-		"build-storybook": "storybook build"
+		"build-storybook": "storybook build",
+		"format": "prettier --write ."
 	},
 	"dependencies": {
 		"@floating-ui/react": "^0.26.9",
