--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,27 @@
 {
-	"extends": ["next/core-web-vitals", "plugin:storybook/recommended", "prettier"],
+	"extends": [
+		"next/core-web-vitals",
+		"plugin:@typescript-eslint/recommended",
+		"plugin:storybook/recommended",
+		"prettier"
+	],
+	"parser": "@typescript-eslint/parser",
+	"plugins": ["@typescript-eslint"],
 	"rules": {
 		"react/jsx-filename-extension": "off",
 		"import/extensions": "off",
-		"react/no-unescaped-entities": "off"
-	}
+		"react/no-unescaped-entities": "off",
+		"@typescript-eslint/no-unused-vars": "error",
+		"@typescript-eslint/explicit-function-return-type": "off",
+		"@typescript-eslint/explicit-module-boundary-types": "off",
+		"@typescript-eslint/no-explicit-any": "warn"
+	},
+	"overrides": [
+		{
+			"files": ["*.ts", "*.tsx"],
+			"rules": {
+				"@typescript-eslint/explicit-function-return-type": ["error", { "allowExpressions": true }]
+			}
+		}
+	]
 }
