--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
 		"@react-oauth/google": "^0.12.1",
 		"@tanstack/react-query": "^5.45.1",
 		"@tanstack/react-query-devtools": "^5.51.9",
+		"@tiptap/pm": "^2.6.6",
+		"@tiptap/react": "^2.6.6",
+		"@tiptap/starter-kit": "^2.6.6",
 		"awesome-graphql-client": "^2.0.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
@@ -36,6 +39,7 @@
 		"react-dom": "^18",
 		"react-hook-form": "^7.50.1",
 		"react-icons": "^5.0.1",
+		"react-image-crop": "^11.0.7",
 		"sonner": "^1.4.41",
 		"tailwind-merge": "^2.2.2",
 		"zod": "^3.22.4",
