--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,12 @@
 			"@/*": ["./src/*"]
 		}
 	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/shared/CommentForm"],
+	"include": [
+		"next-env.d.ts",
+		"**/*.ts",
+		"**/*.tsx",
+		".next/types/**/*.ts",
+		"src/app/shared/CommentForm"
+	],
 	"exclude": ["node_modules"]
 }
