--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
 		"@storybook/nextjs": "^8.0.5",
 		"@storybook/react": "^8.0.5",
 		"@storybook/test": "^8.0.5",
-		"@types/node": "^20",
+		"@types/node": "20.17.6",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
 		"autoprefixer": "^10.0.1",
@@ -75,6 +75,6 @@
 		"prettier-plugin-tailwindcss": "^0.6.6",
 		"storybook": "^8.0.5",
 		"tailwindcss": "^3.3.0",
-		"typescript": "^5.3.3"
+		"typescript": "5.6.3"
 	}
 }
